--- a/app/src/main/res/layout/activity_wallpaper_detail.xml
+++ b/app/src/main/res/layout/activity_wallpaper_detail.xml
@@ -59,6 +59,34 @@
                 android:src="@drawable/register"
                 android:scaleType="centerCrop"/>
 
+            <RelativeLayout
+                android:id="@+id/btn_download"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_alignParentBottom="true"
+                android:background="#80000000">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="DESCARGAR IMAGEN"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:textSize="18dp"
+                    android:gravity="center_horizontal|center_vertical"/>
+
+                <Button
+                    android:id="@+id/spark_button"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/ic_download"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="20dp"/>
+
+            </RelativeLayout>
+
         </RelativeLayout>
 
     </android.support.v4.widget.NestedScrollView>
