--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -26,7 +26,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="REGISTRATE"
+                android:text=""
                 android:textSize="18dp"
                 android:textColor="@color/white"
                 android:gravity="center_horizontal|center_vertical"
