--- a/app/src/main/res/layout/card_wallpapers.xml
+++ b/app/src/main/res/layout/card_wallpapers.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="230dp">
 
@@ -86,6 +87,30 @@
                     android:textStyle="bold" />
 
             </LinearLayout>
+
+            <com.varunest.sparkbutton.SparkButton
+                android:id="@+id/spark_button_stars"
+                android:layout_toLeftOf="@+id/spark_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:sparkbutton_activeImage="@drawable/ic_star_on"
+                app:sparkbutton_inActiveImage="@drawable/ic_star_off"
+                app:sparkbutton_iconSize="20dp"
+                app:sparkbutton_primaryColor="@color/star_primary_color"
+                app:sparkbutton_secondaryColor="@color/star_secondary_color"
+                android:layout_alignParentBottom="true"/>
+
+            <com.varunest.sparkbutton.SparkButton
+                android:id="@+id/spark_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:sparkbutton_activeImage="@drawable/ic_heart_on"
+                app:sparkbutton_inActiveImage="@drawable/ic_heart_off"
+                app:sparkbutton_iconSize="20dp"
+                app:sparkbutton_primaryColor="@color/heart_primary_color"
+                app:sparkbutton_secondaryColor="@color/heart_secondary_color"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"/>
 
         </RelativeLayout>
 
