--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -19,7 +19,7 @@
         android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:background="#a19e9e">
+        android:background="#daaaaa">
 
         <TextView
             android:id="@+id/tv_name"
@@ -28,7 +28,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginStart="11dp"
             android:gravity="center"
-            android:text="Bienvenido Christofer YR"
+            android:text="Tus favoritos"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="@dimen/title"
@@ -36,6 +36,19 @@
             android:layout_marginTop="14dp"/>
 
     </RelativeLayout>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/iv_picture2"
+        android:layout_below="@+id/rl_profile"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="-45dp"
+        app:civ_border_width="4dp"
+        app:civ_border_color="@color/white"
+        app:civ_border_overlay="false"
+        android:src="#FF353131"/>
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/iv_picture"
@@ -48,7 +61,7 @@
         app:civ_border_width="4dp"
         app:civ_border_color="@color/white"
         app:civ_border_overlay="false"
-        android:src="@drawable/ic_profile"/>
+        android:src="@drawable/ic_heart_on"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
